--- a/src/hyperledger-fabric/Dockerfile
+++ b/src/hyperledger-fabric/Dockerfile
@@ -1,1 +1,24 @@
+# syntax=docker/dockerfile:1.4
+
+
+# Base Image
+# =============================================================================
+
 FROM hyperledger/fabric-peer:2.2
+
+
+# Labels
+# =============================================================================
+
+LABEL \
+    maintainer="Block Foundation <info@blockfoundation.io>" \
+    org.opencontainers.image.title="Hyperledger Fabric Peer" \
+    org.opencontainers.image.version="1.0" \
+    org.opencontainers.image.authors="Block Foundation" \
+    org.opencontainers.image.vendor="Block Foundation" \
+    org.opencontainers.image.url="https://www.blockfoundation.io" \
+    org.opencontainers.image.source="https://github.com/block-foundation/docker-hyperledger-fabric/" \
+    org.opencontainers.image.documentation="https://github.com/block-foundation/docker-hyperledger-fabric/" \
+    org.opencontainers.image.licenses="Commercial" \
+    org.opencontainers.image.description="Hyperledger Fabric Peer" \
+    org.opencontainers.image.ref.name="docker-hyperledger-fabric"
